--- a/darkest-stagecoach/package.json
+++ b/darkest-stagecoach/package.json
@@ -11,6 +11,7 @@
         "@types/node": "^12.20.14",
         "@types/react": "^17.0.9",
         "@types/react-dom": "^17.0.6",
+        "@types/styled-components": "^5.1.10",
         "react": "^17.0.2",
         "react-dom": "^17.0.2",
         "react-scripts": "4.0.3",
@@ -48,5 +49,8 @@
         "useTabs": false,
         "printWidth": 80,
         "jsxBracketSameLine": true
+    },
+    "devDependencies": {
+        "babel-plugin-styled-components": "^1.12.0"
     }
 }
