--- a/darkest-stagecoach/package.json
+++ b/darkest-stagecoach/package.json
@@ -2,6 +2,7 @@
     "name": "darkest-stagecoach",
     "version": "0.1.0",
     "private": true,
+    "homepage": "https://leoven.github.io/darkest-stagecoach",
     "dependencies": {
         "@fortawesome/free-brands-svg-icons": "^5.15.3",
         "@fortawesome/react-fontawesome": "^0.1.14",
