Mod-reader now reading resistances

--- a/mod-reader/Cargo.toml
+++ b/mod-reader/Cargo.toml
@@ -8,7 +8,8 @@ edition = "2018"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-humansize = "1"
+regex = "1"
+lazy_static = "1.4"
 tokio = { version = "1", features = ["full"] }
 tokio-stream = { version = "0.1.5", features = ["fs"] }
 futures = "0.3.13"
