--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -10,7 +10,8 @@
                 "--bin",
                 "\"mod_writer\"",
                 "--",
-                "C:\\Program Files (x86)\\Steam\\steamapps\\common\\DarkestDungeon\\mods"
+                "C:\\Users\\lvenk\\Documents\\Darkest Dungeon\\tests\\mods",
+                "C:\\Users\\lvenk\\Documents\\GitHub\\darkest-stagecoach\\darkest-stagecoach\\src\\mods"
             ],
             "problemMatcher": []
         },
