More info and structural changes

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,2 +1,9 @@
 [workspace]
-members = ["mod-reader", "parser", "root_finder", "mod_reader", "mod_writer"]
+members = [
+    "mod-reader",
+    "parser",
+    "root_finder",
+    "mod_reader",
+    "mod_writer",
+    "mod_parser",
+]
