More mod reading/parsing/writing

--- a/mod_reader/Cargo.toml
+++ b/mod_reader/Cargo.toml
@@ -9,3 +9,5 @@ edition = "2021"
 tokio = "1"
 root_finder = { path = "../root_finder" }
 parser = { path = "../parser" }
+base64 = "0.13"
+anyhow = "1"
