Skill reading and writing done

--- a/mod_reader/Cargo.toml
+++ b/mod_reader/Cargo.toml
@@ -9,5 +9,6 @@ edition = "2021"
 tokio = "1"
 root_finder = { path = "../root_finder" }
 parser = { path = "../parser" }
+xml_parser = { path = "../xml_parser" }
 base64 = "0.13"
 anyhow = "1"
